Commented out utility double click

--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
         const map = L.map('map').setView([0.3, 0.4], 10);
 
         //utility fn to help find specific lats and lons
-        map.on('dblclick', function(e) {
-            // Get the latitude and longitude of the clicked point
-            var lat = e.latlng.lat;
-            var lon = e.latlng.lng;
+        //map.on('dblclick', function(e) {
+        //    // Get the latitude and longitude of the clicked point
+        //   var lat = e.latlng.lat;
+        //    var lon = e.latlng.lng;
 
             // Show an alert with the latitude and longitude
-            alert('Latitude: ' + lat + '\nLongitude: ' + lon);
-        });
+        //    alert('Latitude: ' + lat + '\nLongitude: ' + lon);
+        //});
 
         // icon width based on name length
         function iconWidthCalc(nm){
